# ming_iv8_rs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
crates/iv8-core/: Cargo.toml  build.rs
crates/iv8-core/benches/: iv8_bench.rs
crates/iv8-core/cxx/: iv8_v8_extra.cc
crates/iv8-core/data/: README.md
crates/iv8-core/src/: bcr_builder.rs  config.rs  convert.rs  env_inject.rs  error.rs  expose.rs  lib.rs  safe_callback.rs  snapshot.rs  state.rs  telemetry.rs  user_overrides.rs  v8_extra.rs  v8_init.rs  v8_utils.rs
crates/iv8-core/src/_archive/: README.md
crates/iv8-core/src/_archive/dom/: browser_apis.js  browser_apis.rs  navigation.rs
crates/iv8-core/src/_archive/examples/: v8_spike.rs
crates/iv8-core/src/_archive/kernel/: embedded_v8.rs
crates/iv8-core/src/_archive/shims/: dom_prototypes.rs  element_prototypes.rs  tier1_stubs.js  tier1_stubs.rs
crates/iv8-core/src/canvas/: binding.rs  canvas2d.rs  mod.rs  webgl.rs
crates/iv8-core/src/crypto/: ec_impl.rs  ed_impl.rs  mod.rs  random.rs  rsa_impl.rs  subtle.rs
crates/iv8-core/src/dom/: binding.rs  cookie_jar.rs  local_storage.rs  mod.rs  node.rs  parser.rs  selector.rs  serialize.rs  template.rs
crates/iv8-core/src/entry/: amd.rs  ast.rs  classification.rs  diagnostics.rs  dispatch.rs  executor.rs  mod.rs  planner.rs  policy.rs  source_map.rs  types.rs
crates/iv8-core/src/entry/browserify/: mod.rs
crates/iv8-core/src/entry/hooks/: aggressive.rs  mod.rs  transparent.rs
crates/iv8-core/src/entry/parcel/: mod.rs
crates/iv8-core/src/entry/rollup/: mod.rs
crates/iv8-core/src/entry/umd/: mod.rs
crates/iv8-core/src/entry/vite/: mod.rs
crates/iv8-core/src/entry/webpack/: mod.rs
crates/iv8-core/src/events/: binding.rs  date_interceptor.rs  event_loop.rs  input_sim.rs  mod.rs  page_api.rs  target.rs  timers.rs
crates/iv8-core/src/inspector/: cdp_client.rs  channel.rs  mod.rs  server.rs  session.rs
crates/iv8-core/src/kernel/: embedded_v8.rs  mod.rs  post_hoc_fixes.rs
crates/iv8-core/src/network/: bundle.rs  fetch.rs  mod.rs  xhr.rs
crates/iv8-core/src/shims/: atob_btoa.rs  audio_context.rs  browser_profile.rs  console.rs  cssom.rs  document_props.rs  event_constructors.rs  geometry.rs  location.rs  message_channel.rs  mod.rs  native_env.rs  navigator_extras.rs  storage.rs  structured_clone.rs  url.rs  user_agent_data.rs  window_extras.rs  window_properties.rs  worker.rs  worker_bootstrap.js  worker_js_stub.js
crates/iv8-core/src/shims/probes/: mod.rs  probe_battery.rs  probe_clipboard.rs  probe_connection.rs  probe_credentials.rs  probe_eme.rs  probe_gamepad.rs  probe_geolocation.rs  probe_midi.rs  probe_record.rs  probe_send_beacon.rs
crates/iv8-core/tests/: test_canvas_2d.rs  test_canvas_webgl.rs  test_codegen_global_interface.rs  test_crypto_basic.rs  test_crypto_subtle.rs  test_dom_audio_context.rs  test_dom_binding.rs  test_dom_geometry.rs  test_dom_inner_html.rs  test_dom_inner_html_setter.rs  test_dom_navigation.rs  test_entry_l3_pressure.rs  test_entry_multi_bundler.rs  test_events_binding.rs  test_events_clock.rs  test_events_constructors.rs  test_events_document_target.rs  test_events_event_loop.rs  test_events_input_sim.rs  test_events_message_channel.rs  test_events_page_load.rs  test_events_promise_semantics.rs  test_events_target.rs  test_events_target_dispatch.rs  test_events_timers.rs  test_events_timing.rs  test_executor.rs  test_headers_shape.rs  test_high_signal_consistency.rs  test_inspector_channel.rs  test_k008_accessor_workaround.rs  test_kernel_edge_cases.rs  test_kernel_init.rs  test_kernel_v8_extra.rs  test_kernel_v8_hello.rs  test_network_fetch.rs  test_network_fetch_netlog.rs  test_network_netlog.rs  test_network_xhr.rs  test_page_api.rs  (+21 more)
crates/iv8-core/tests/common/: mod.rs
crates/iv8-core/tests/fixtures/multi_bundler/: README.md  bdms_negative_plain_cjs.js  bdms_positive_minified_like.js  browserify_minimal.js  esbuild_minimal.js  rollup_iife_minimal.js  rollup_umd_minimal.js  unknown_iife_minimal.js  vite_esm_minimal.js  vite_iife_minimal.js  webpack_multichunk_page.js  webpack_multichunk_runtime.js  webpack_multichunk_vendor.js
crates/iv8-profile/: Cargo.toml
crates/iv8-profile/src/: behavior_config.rs  defaults.rs  lib.rs  manifest.rs  matrix.rs  projection.rs  report.rs  source.rs  validation.rs
crates/iv8-py/: Cargo.toml
crates/iv8-py/src/: context.rs  debugger.rs  entry.rs  error.rs  expose.rs  instrumentation.rs  lib.rs  logging.rs  value_convert.rs
crates/iv8-py/tests/: test_nested_env.py
crates/iv8-surface/: Cargo.toml
crates/iv8-surface/src/: behavior.rs  descriptor.rs  lib.rs  promise_check.rs  registry.rs  type_conv.rs
crates/iv8-surface/src/hand_implemented/: canvas2d.rs  location.rs  mod.rs  navigator.rs  verification.rs  webgl.rs
crates/iv8-surface/tests/: scope_validation.rs  template_method_override.rs
crates/iv8-undetect/: Cargo.toml
crates/iv8-undetect/src/: hook_native.rs  lib.rs  undetectable.rs  window_chrome.rs  wrap_native.rs
crates/iv8-undetect/src/shims/: hook_native.js  window_chrome.js  wrap_native.js
docs/: GUIDE.public.md
scripts/: _api_doc_inventory_ci.py  _browserforge_adapter.py  _cargo_test_serial.ps1  _d1_d5_behavior.py  _detection_vector_registry.py  run_wpt.py  (+37 more)
tools/iv8-surface-codegen/: Cargo.toml
tools/iv8-surface-codegen/src/: codegen.rs  ea_handler.rs  ir.rs  lib.rs  main.rs  topo.rs  type_mapper.rs
tools/iv8-surface-codegen/tests/: test_golden.rs  test_pipeline_stage_load_ir.rs
tools/iv8-surface-codegen/tests/fixtures/: minimal_ir.json
tools/iv8-surface-codegen/tests/golden/: bluetooth.rs  cache_api.rs  chrome_extensions.rs  credentials.rs  crypto.rs  css_om.rs  dom_core.rs  encoding.rs  events.rs  fetch.rs  gamepad.rs  gpu.rs  hid.rs  html_elements.rs  idb.rs  install_all.rs  media_apis.rs  midi.rs  mod.rs  observers.rs  payment.rs  presentation.rs  sensors.rs  streams.rs  svg.rs  url.rs  usb.rs  web_apis.rs  web_audio.rs  webgl.rs  webrtc.rs  webxr.rs  workers.rs
(+525 files in other folders)
