[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ming_iv8_rs"
version = "0.8.12"
requires-python = ">=3.13"
description = "High-fidelity browser runtime for Python, powered by V8 (import as iv8_rs)"
license = { text = "Apache-2.0" }
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "maturin>=1.7",
    "hypothesis>=6.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "ruff>=0.15.16",
]

[tool.uv]
package = false

[tool.maturin]
manifest-path = "crates/iv8-py/Cargo.toml"
python-source = "python"
module-name = "iv8_rs._iv8"
features = ["pyo3/extension-module"]
profile = "release"
# Chromium ICU common data for Intl (V8::InitializeICU path)
include = ["python/iv8_rs/icudtl.dat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
markers = [
    "e2e: end-to-end tests (slow)",
    "bench: benchmark tests",
    "slow: slow tests (round-trip DTO, etc.)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"

# ─── cibuildwheel ─────────────────────────────────────────────────────────────
# Workflow env in .github/workflows/build-wheels.yml is SoT for CI images/cache.
# Keep this section aligned for local `cibuildwheel` runs.
[tool.cibuildwheel]
build = ["cp313-*"]
skip = ["*-musllinux_*", "cp313t-*"]
test-command = "python -c \"import iv8_rs; c=iv8_rs.JSContext(); assert c.eval('1+1')==2; c.close()\""

[tool.cibuildwheel.linux]
# Prefer CARGO_HOME when set (workflow mounts /project/.cargo-cibw for cache).
before-all = [
    "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.96.0 --profile minimal",
    ". \"${CARGO_HOME:-$HOME/.cargo}/env\"",
    "export PATH=\"${CARGO_HOME:-$HOME/.cargo}/bin:$PATH\"",
]
environment = { PATH = "/project/.cargo-cibw/bin:$HOME/.cargo/bin:$PATH", CARGO_NET_GIT_FETCH_WITH_CLI = "true", RUST_MIN_STACK = "134217728", CARGO_HOME = "/project/.cargo-cibw", RUSTUP_HOME = "/project/.rustup-cibw", CARGO_TARGET_DIR = "/project/target", V8_FROM_SOURCE = "1", GN_ARGS = "v8_monolithic=true v8_monolithic_for_shared_library=true" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
before-all = [
    "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.96.0 --profile minimal",
    ". \"${CARGO_HOME:-$HOME/.cargo}/env\"",
    "export PATH=\"${CARGO_HOME:-$HOME/.cargo}/bin:$PATH\"",
]
environment = { PATH = "$HOME/.cargo/bin:$PATH", RUST_MIN_STACK = "134217728" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
# Rust is pre-installed on GitHub Actions Windows runners
before-all = []
