[package]
name = "iv8-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "iv8-rs core: V8 embedded browser host engine"
build = "build.rs"

[build-dependencies]
cc = "1.2"

[dependencies]
v8 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ego-tree = { workspace = true }
html5ever = { workspace = true }
selectors = { workspace = true }
cssparser = { workspace = true }
precomputed-hash = "0.1"
parking_lot = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
rsa = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
elliptic-curve = { workspace = true }
ecdsa = { workspace = true }
hkdf = { workspace = true }
pkcs8 = { workspace = true }
spki = { workspace = true }
rand = { workspace = true }
tiny-skia = { workspace = true }
png = { workspace = true }

# SWC AST transform
swc_common = "23"
swc_ecma_ast = "25"
swc_ecma_parser = "41"
swc_ecma_visit = "25"
swc_ecma_codegen = "28"
ctr = "0.9"

[features]
default = []

[dependencies.iv8-surface]
path = "../iv8-surface"

[dependencies.iv8-profile]
path = "../iv8-profile"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "iv8_bench"
harness = false

[lints]
workspace = true
