[package]
name = "iv8-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "iv8-rs Python binding (PyO3)"

[lib]
name = "_iv8"
crate-type = ["cdylib"]

[dependencies]
iv8-core = { path = "../iv8-core" }
iv8-undetect = { path = "../iv8-undetect" }
v8 = { workspace = true }
pyo3 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
regex-lite = "0.1"

[lints]
workspace = true
