[package]
name = "iv8-surface-codegen"
version = "0.1.0"
edition = "2021"
description = "IV8 code generator — produces iv8-surface FunctionTemplate stubs from unified_ir.json"

[[bin]]
name = "iv8-surface-codegen"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.5"
